--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3B6FD9</color>
-    <color name="colorPrimaryDark">#F29F05</color>
+    <color name="colorPrimaryDark">#4183D9</color>
     <color name="colorAccent">#592B02</color>
 </resources>
