--- a/app/src/main/res/layout/activity_servicios.xml
+++ b/app/src/main/res/layout/activity_servicios.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="80dp"
             android:textSize="30sp"
-            android:id="@+id/tituloMainMenu"
+            android:id="@+id/tituloServicios"
             android:textAlignment="center"/>
 
     </RelativeLayout>
