--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,17 +7,16 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_historial"
+        android:id="@+id/navigation_estadisticas"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_historial" />
+        android:title="@string/title_estadisticas" />
 
     <item
         android:id="@+id/navigation_recompensas"
         android:icon="@drawable/ic_add_shopping_cart_black_24dp"
         android:title="@string/title_recompensas" />
     <item
-        android:id="@+id/navigation_notificaciones"
+        android:id="@+id/navigation_servicios"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notificaciones" />
-
+        android:title="@string/title_servicios" />
 </menu>
