--- a/app/src/main/res/layout/activity_menu_main.xml
+++ b/app/src/main/res/layout/activity_menu_main.xml
@@ -25,18 +25,9 @@
             tools:context="com.example.currentplacedetailsonmap.MapsActivityCurrentPlace" />
 
 
+
         <EditText
-            android:id="@+id/txt_velMed"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginEnd="411dp"
-            android:layout_marginRight="411dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Name" />
-        <EditText
+            android:id="@+id/txt_vel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
@@ -45,8 +36,57 @@
             android:layout_alignParentBottom="true"
             android:layout_marginEnd="10dp"
             android:layout_marginRight="200dp"
-            android:layout_marginBottom="50dp"
+            android:layout_marginBottom="150dp"
             android:text="Velocidad" />
+
+        <EditText
+            android:id="@+id/txt_dist"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginBottom="200dp"
+            android:text="Distancia" />
+        <EditText
+            android:id="@+id/txt_calorias"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginBottom="250dp"
+            android:text="Calorias" />
+        <EditText
+            android:id="@+id/txt_velMed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginBottom="300dp"
+            android:text="Velocida Media" />
+        <EditText
+            android:id="@+id/txt_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginBottom="350dp"
+            android:text="Tiempo" />
 
 
 
