--- a/app/src/main/res/layout/activity_recompensas.xml
+++ b/app/src/main/res/layout/activity_recompensas.xml
@@ -10,18 +10,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <ListView
+            android:id="@+id/listrecompensas"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
-            android:textSize="30sp"
-            android:id="@+id/tituloRecompensas"
-            android:textAlignment="center"/>
+            android:layout_height="wrap_content"></ListView>
 
     </RelativeLayout>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         style="@style/Widget.MaterialComponents.BottomNavigationView"
-        android:id="@+id/nav_view"
+        android:id="@+id/nav_viewrecompensas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
