--- a/app/src/main/res/layout/activity_menu_main.xml
+++ b/app/src/main/res/layout/activity_menu_main.xml
@@ -37,6 +37,7 @@
             android:layout_marginEnd="10dp"
             android:layout_marginRight="200dp"
             android:layout_marginBottom="150dp"
+            android:background="@color/colorSecondary"
             android:text="Velocidad" />
 
         <EditText
@@ -50,6 +51,7 @@
             android:layout_marginEnd="10dp"
             android:layout_marginRight="50dp"
             android:layout_marginBottom="200dp"
+            android:background="@color/colorSecondary"
             android:text="Distancia" />
         <EditText
             android:id="@+id/txt_calorias"
@@ -62,6 +64,7 @@
             android:layout_marginEnd="10dp"
             android:layout_marginRight="50dp"
             android:layout_marginBottom="250dp"
+            android:background="@color/colorSecondary"
             android:text="Calorias" />
         <EditText
             android:id="@+id/txt_velMed"
@@ -74,6 +77,7 @@
             android:layout_marginEnd="10dp"
             android:layout_marginRight="50dp"
             android:layout_marginBottom="300dp"
+            android:background="@color/colorSecondary"
             android:text="Velocida Media" />
         <EditText
             android:id="@+id/txt_time"
@@ -86,11 +90,12 @@
             android:layout_marginEnd="10dp"
             android:layout_marginRight="50dp"
             android:layout_marginBottom="350dp"
+            android:background="@color/colorSecondary"
             android:text="Tiempo" />
 
 
 
-
+5
         <Button
             android:id="@+id/btnInicio"
             android:layout_width="wrap_content"
