presentacion de la notificación en un activity

--- a/app/src/main/res/layout/activity_recompensas.xml
+++ b/app/src/main/res/layout/activity_recompensas.xml
@@ -18,6 +18,17 @@
             android:id="@+id/tituloRecompensas"
             android:textAlignment="center"/>
 
+        <TextView
+            android:id="@+id/infoTextView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mensaje: "
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
     </RelativeLayout>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         style="@style/Widget.MaterialComponents.BottomNavigationView"
